# markly

./: .gitignore  AGENTS.md  LICENSE  README.md  pubspec.yaml
.agents/planning/: billing-plan.md  search-pagination-ideas.md
.agents/skills/skill-maintenance/: SKILL.md
.agents/skills/spec-as-source-management/: SKILL.md
.agents/skills/task-planning/: SKILL.md
.agents/specs/: SYSTEM.md  US-001.md  US-002.md  US-003.md  US-004.md  US-005.md  US-006.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml  improvement.yml  question.yml
.github/workflows/: build-windows.yml
android/app/: build.gradle.kts  google-services.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  auth.py  config.py  database.py  docker-compose.yml  main.py  merge.py  models.py  pyproject.toml  sessions.py  transcription.py  usage.py
docs/: search-pagination-ideas.md
lib/: app.dart  firebase_options.dart  main.dart
lib/features/account/: account_page.dart
lib/features/auth/: auth_service.dart  login_page.dart
lib/features/chat/: chat_page.dart
lib/features/history/: history_page.dart  (+1 more)
lib/shared/: api_service.dart  csv_service.dart  file_service.dart  foreground_service.dart  markdown.dart  metadata_service.dart  reminder_service.dart  theme.dart  update_service.dart  wasapi_service.dart
test/: widget_test.dart
tool/: gen_icon.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  wasapi_recorder.cpp  wasapi_recorder.h
(+15 files in other folders)
